objects/Property__c.object
<CustomObject>
    <description>Properties for which customers and indirect channel partners (loan officers, real estate agents, etc) have inquired the investment approval status.</description>
    <fields>
        <fullName>Adjusted_OAV__c</fullName>
        <label>Adjusted OAV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appraisal_Storm_SD__c</fullName>
        <description>The standard deviation from the best estimate of an automated valuation model (AVM).</description>
        <inlineHelpText>The standard deviation from the best estimate of an automated valuation model (AVM).</inlineHelpText>
        <label>Appraisal Storm SD</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appraisal_Storm_Value__c</fullName>
        <description>The best estimate of an automated valuation model (AVM). Requested by Investment Management team.</description>
        <inlineHelpText>The best estimate of an automated valuation model (AVM).</inlineHelpText>
        <label>Appraisal Storm Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_AVM__c</fullName>
        <description>The average of multiple automated valuation models (AVMs). Requested by Investment Management team.</description>
        <inlineHelpText>The average of multiple automated valuation models (AVMs).</inlineHelpText>
        <label>Average AVM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bath_Source__c</fullName>
        <label>Bath Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bath__c</fullName>
        <label>Baths</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bed_Source__c</fullName>
        <label>Bed Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bed__c</fullName>
        <label>Beds</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Year_Source__c</fullName>
        <label>Build Year Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Year__c</fullName>
        <label>Build Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Id__c</fullName>
        <description>The term "Core Based Statistical Area" (CBSA) is a collective term for both metropolitan and micropolitan statistical areas (metro and micro areas) which are geographic entities delineated by the Office of Management and Budget (OMB) for use by Federal statistical agencies in collecting, tabulating, and publishing Federal statistics.</description>
        <inlineHelpText>Core Based Statistical Area code</inlineHelpText>
        <label>CBSA Id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBSA_Name__c</fullName>
        <inlineHelpText>Core based statistical area name</inlineHelpText>
        <label>CBSA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_on_Market__c</fullName>
        <label>Days on Market</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Conditions__c</fullName>
        <label>Decision Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Date_Time__c</fullName>
        <label>Decision Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decision_Expiration__c</fullName>
        <inlineHelpText>Expiration date of most recent IM decision</inlineHelpText>
        <label>Decision Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Notes__c</fullName>
        <label>Decision Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distressed_Sale_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distressed Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <inlineHelpText>Federal Information Processing Standards (FIPS) identifier for US state (first two digits) and county (last three digits)</inlineHelpText>
        <label>FIPS Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finished_Bsement_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished Bsement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_American_AVM__c</fullName>
        <label>First American AVM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flood_Policy_Contact_Phone__c</fullName>
        <description>The contact number related to the Flood Policy associated to the Property. This field is used by the Asset Management/Investor Ops team: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>The contact number related to the Flood Policy associated to the Property.</inlineHelpText>
        <label>Flood Policy Contact #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flood_Policy_Deductible__c</fullName>
        <description>The deductible for the Flood Policy associated to the Property. This field is used by the Asset Management/Investor Ops team: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>The contact number related to the Flood Policy associated to the Property.</inlineHelpText>
        <label>Flood Policy Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flood_Policy_Expiration__c</fullName>
        <description>Date that the Flood Insurance Policy expires. This field is used by the Asset Management/Investor Ops team: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Date that the Flood Insurance Policy expires.</inlineHelpText>
        <label>Flood Policy Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flood_Policy_Insurer__c</fullName>
        <description>The insurer of the flood policy associated to the Property. This field is used by the Asset Management/Investor Ops team: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>The insurer of the flood policy associated to the Property.</inlineHelpText>
        <label>Flood Policy Insurer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flood_Policy_Limit__c</fullName>
        <description>Limit (in dollars) to Flood Policy Coverage for flood policy associated to the Property. This field is used by the Asset Management/Investor Ops team: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Limit (in dollars) to Flood Policy Coverage for flood policy associated to the Property.</inlineHelpText>
        <label>Flood Policy Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flood_Policy_Start__c</fullName>
        <description>Date that the Flood Insurance Policy began. This field is used by the Asset Management/Investor Ops team: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Date that the Flood Insurance Policy began.</inlineHelpText>
        <label>Flood Policy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Street_Address__c</fullName>
        <inlineHelpText>Property address including street number, street name, suffixes and unit.</inlineHelpText>
        <label>Full Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gated_Community_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gated Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geolocation_Latitude__c</fullName>
        <label>Geolocation (Latitude)</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Geolocation_Longitude__c</fullName>
        <label>Geolocation (Longitude)</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Greenlight_Deciles__c</fullName>
        <label>Greenlight Deciles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenlight_Id__c</fullName>
        <label>Greenlight Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenlight_Layer_Flags__c</fullName>
        <label>Greenlight Layer Flags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenlight_Raw_Scores__c</fullName>
        <label>Greenlight Raw Scores</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Fees__c</fullName>
        <label>HOA Fees</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>High_AVM__c</fullName>
        <description>The high value of multiple automated valuation models (AVMs). Requested by Investment Management team.</description>
        <inlineHelpText>The low value of multiple automated valuation models (AVMs).</inlineHelpText>
        <label>High AVM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>House_Canary_AVM__c</fullName>
        <label>House Canary AVM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inquiry_Conditions__c</fullName>
        <label>Inquiry Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inquiry_Decision_Expiration__c</fullName>
        <inlineHelpText>Expiration date of most recent IM decision</inlineHelpText>
        <label>Decision Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry_Maximum_OAV__c</fullName>
        <label>Maximum Approved OAV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inquiry_Notes__c</fullName>
        <label>Inquiry Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inquiry_Occupancy_Statement_del__c</fullName>
        <label>Occupancy Statement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal Residence</fullName>
                </value>
                <value>
                    <fullName>Second Vacation Home</fullName>
                </value>
                <value>
                    <fullName>Investment Property</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_was_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property was Escalated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NOO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New product features with launch of fund in April. This field needs to be captured</description>
        <label>Is Non-Owner-Occupied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Lease_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Land Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sold_Date_Source__c</fullName>
        <label>Last Sold Date Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sold_Date__c</fullName>
        <label>Last Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Listing_Price__c</fullName>
        <label>Listing Price</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lot_Size_Source__c</fullName>
        <label>Lot Size Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Size__c</fullName>
        <label>Lot Size</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_AVM__c</fullName>
        <description>The low value of multiple automated valuation models (AVMs). Requested by Investment Management team.</description>
        <inlineHelpText>The low value of multiple automated valuation models (AVMs).</inlineHelpText>
        <label>Low AVM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Median_AVM__c</fullName>
        <description>The median of multiple automated valuation models (AVMs). Requested by Investment Management team.</description>
        <inlineHelpText>The low value of multiple automated valuation models (AVMs).</inlineHelpText>
        <label>Median AVM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Inquiry_Date_Time__c</fullName>
        <inlineHelpText>Date and time of the most recent inquiry on this property</inlineHelpText>
        <label>Inquiry Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Construction_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Found_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to determine whether investor guidelines are broken. Do not change this field without first consulting Brodie or Abinhay Korukonda.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Over_55_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over 55 Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pool_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_per_Sqft__c</fullName>
        <label>Price per Sqft</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Ratio__c</fullName>
        <inlineHelpText>Pricing Ratio based on Unison Program</inlineHelpText>
        <label>Inquiry Pricing Ratio</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Block_Number__c</fullName>
        <label>Block Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Building_Sqft__c</fullName>
        <label>Building Sqft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_CBSA_Name__c</fullName>
        <inlineHelpText>Core based statistical area name</inlineHelpText>
        <label>CBSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Condition_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Condition Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Condition__c</fullName>
        <description>This field is used to determine whether investor guidelines are broken. Do not change this field without first consulting Brodie or Abinhay Korukonda.</description>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Condo_PUD_Name__c</fullName>
        <label>Condo/PUD Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <label>County Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Estimated_Value__c</fullName>
        <label>Estimated Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_FIPS__c</fullName>
        <inlineHelpText>Federal Information Processing Standards (FIPS) identifier for US state (first two digits) and county (last three digits)</inlineHelpText>
        <label>FIPS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Flood_Zone__c</fullName>
        <label>Flood Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A10</fullName>
                </value>
                <value>
                    <fullName>A11</fullName>
                </value>
                <value>
                    <fullName>A12</fullName>
                </value>
                <value>
                    <fullName>A13</fullName>
                </value>
                <value>
                    <fullName>A14</fullName>
                </value>
                <value>
                    <fullName>A15</fullName>
                </value>
                <value>
                    <fullName>A16</fullName>
                </value>
                <value>
                    <fullName>A17</fullName>
                </value>
                <value>
                    <fullName>A18</fullName>
                </value>
                <value>
                    <fullName>A19</fullName>
                </value>
                <value>
                    <fullName>A1-A30</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A20</fullName>
                </value>
                <value>
                    <fullName>A21</fullName>
                </value>
                <value>
                    <fullName>A22</fullName>
                </value>
                <value>
                    <fullName>A23</fullName>
                </value>
                <value>
                    <fullName>A24</fullName>
                </value>
                <value>
                    <fullName>A25</fullName>
                </value>
                <value>
                    <fullName>A26</fullName>
                </value>
                <value>
                    <fullName>A27</fullName>
                </value>
                <value>
                    <fullName>A28</fullName>
                </value>
                <value>
                    <fullName>A29</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A30</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>A7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Geo_Id__c</fullName>
        <label>Property Geo Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ID__c</fullName>
        <label>Property ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Last_Sold_Date__c</fullName>
        <label>Last Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Legal_Description__c</fullName>
        <label>Legal Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Listing_Price__c</fullName>
        <label>Listing Price</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Lot_Sqft__c</fullName>
        <label>Lot Sqft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_New_Construction_Development__c</fullName>
        <label>New Construction Development</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_New_Construction_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Number_of_Units__c</fullName>
        <description>This field is used to determine whether investor guidelines are broken. Do not change this field without first consulting Brodie or Abinhay Korukonda.</description>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Parcel_Number__c</fullName>
        <label>Parcel Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Pre_Qualification_Status__c</fullName>
        <label>Inquiry Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Property_Pre_Qualification_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Rooms_Baths__c</fullName>
        <label>Bathrooms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Rooms_Beds__c</fullName>
        <label>Bedrooms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Rooms_Total__c</fullName>
        <label>Total Rooms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_School_District__c</fullName>
        <label>School District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Section_Number__c</fullName>
        <label>Section Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <inlineHelpText>State must be only two characters in length.</inlineHelpText>
        <label>State / Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street_Number_and_Name__c</fullName>
        <inlineHelpText>Property address including street number, street name, suffixes and unit.</inlineHelpText>
        <label>Full Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Sub_Type__c</fullName>
        <label>Property Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Title_Held__c</fullName>
        <label>Title Held</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individually</fullName>
                </value>
                <value>
                    <fullName>Jointly</fullName>
                </value>
                <value>
                    <fullName>In Trust</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Type_GL__c</fullName>
        <label>Greenlight Property Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type_Source__c</fullName>
        <label>Property Type Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Property_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Value_High__c</fullName>
        <label>High Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Value_Low__c</fullName>
        <label>Low Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Code__c</fullName>
        <label>Zip  / Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Sale_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recent Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Structure_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sqft_Source__c</fullName>
        <label>Square Footage Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>State must be only two characters in length.</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Source__c</fullName>
        <label>Tax Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Year__c</fullName>
        <label>Tax Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Rights__c</fullName>
        <description>Identifies the manner in which title rights are held for the given property. This field is used by the Investment Analyst: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>Identifies the manner in which title rights are held for the given property.</inlineHelpText>
        <label>Title Rights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fee Simple</fullName>
                </value>
                <value>
                    <fullName>Leasehold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transit_Score__c</fullName>
        <label>Transit Score</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Walk_Score_URL__c</fullName>
        <label>Walk Score URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Walk_Score__c</fullName>
        <label>Walk Score</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zestimate__c</fullName>
        <label>Zestimate</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zillow_URL__c</fullName>
        <label>Zillow URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip4__c</fullName>
        <label>Zip4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>